# -OSCAR---Analysis-Reporting-AI-Based-Military-Intelligence-

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENT.md  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  WHAT_GETS_PUSHED.md  docker-compose.yml  packages.txt  pyproject.toml  requirements-ci.txt  requirements-dev.txt  requirements-streamlit.txt  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
.streamlit/: config.toml
configs/: logging.yaml  settings.yaml
dashboard/: __init__.py  app.py  utils.py
dashboard/assets/: style.css
dashboard/pages/: 0_Home.py  1_Map.py  2_Sentiment.py  3_Entities.py  4_Forecast.py  5_Alerts.py  6_About.py  7_Encyclopedia.py  8_Weather.py  9_Markets.py
data/: README.md
docs/: BSERC_FORM_ANSWERS.md  DEPLOYMENT.md  PROJECT_LISTING.md  PROJECT_REPORT.md  REPORT.md
docs/demo/: video_script.md
notebooks/: README.md
scripts/: _bootstrap.py  debug_alerts.py  debug_newsapi.py  debug_settings.py  dev.py  download_gdelt_kaggle.py  fetch_gdelt_bulk.py  fetch_historical_gdelt.py  load_gdelt_bulk.py  run_final_checks.py  run_full_training.py  seed_demo.py  test_newsapi.py
src/: __init__.py  cli.py  config.py
src/domain/: __init__.py  schemas.py
src/ingestion/: __init__.py  acled.py  alphavantage.py  base.py  cli.py  gdelt.py  newsapi.py  openweather.py  reddit.py  wikipedia.py
src/ml/: __init__.py  anomaly.py  cli.py  escalation.py  features.py  forecast.py  registry.py  tracking.py
src/nlp/: __init__.py  cli.py  ner.py  normalize.py  sentiment.py  topics.py
src/observability/: __init__.py  logging.py
src/persistence/: __init__.py  database.py  models.py
src/transform/: __init__.py  silver.py
tests/: __init__.py  conftest.py
tests/e2e/: test_smoke.py
tests/unit/: __init__.py  test_acled.py  test_alphavantage.py  test_config.py  test_dashboard.py  test_gdelt.py  test_ml_anomaly.py  test_ml_escalation.py  test_ml_features.py  test_ml_forecast.py  test_ml_tracking.py  test_ner.py  test_newsapi.py  test_normalize.py  test_openweather.py  test_reddit.py  test_schemas.py  test_sentiment.py  test_silver.py  test_topics.py  test_wikipedia.py
