[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "oscar"
version = "0.1.1"
description = "OSCAR — Open-Source Conflict Analysis & Reporting. OSINT-Powered Threat & Sentiment Intelligence Dashboard."
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "BSERC Intern", email = "intern@example.com" },
]
maintainers = [
  { name = "BSERC Intern", email = "intern@example.com" },
]
keywords = [
  "osint",
  "threat-intelligence",
  "sentiment-analysis",
  "nlp",
  "machine-learning",
  "defense",
  "dashboard",
  "bserc",
  "military-intelligence",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10,<3.13"

dependencies = [
  "python-dotenv>=1.0.1,<2.0.0",
  "pydantic>=2.7.4,<3.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
  "PyYAML>=6.0.2,<7.0.0",
  "loguru>=0.7.2,<1.0.0",

  "httpx>=0.27.0,<1.0.0",
  "requests>=2.32.3,<3.0.0",
  "tenacity>=8.3.0,<9.0.0",
  "feedparser>=6.0.11,<7.0.0",
  "beautifulsoup4>=4.12.3,<5.0.0",
  "lxml>=5.2.2,<6.0.0",

  "pandas>=2.2.2,<3.0.0",
  "numpy>=1.26.4,<3.0.0",
  "pyarrow>=15.0.2,<17.0.0",

  "SQLAlchemy>=2.0.30,<3.0.0",
  "alembic>=1.13.2,<2.0.0",

  "scikit-learn>=1.5.1,<2.0.0",
  "xgboost>=2.0.3,<3.0.0",
  "statsmodels>=0.14.2,<1.0.0",

  "torch>=2.3.1,<3.0.0",
  "transformers>=4.42.4,<5.0.0",
  "sentence-transformers>=2.7.0,<3.0.0",
  "spacy>=3.7.5,<4.0.0",
  "bertopic>=0.16.2,<1.0.0",

  "streamlit>=1.36.0,<2.0.0",
  "streamlit-extras>=0.4.0,<1.0.0",
  "plotly>=5.22.0,<6.0.0",
  "folium>=0.16.0,<1.0.0",
  "streamlit-folium>=0.20.0,<1.0.0",
  "pydeck>=0.9.1,<1.0.0",
  "matplotlib>=3.9.0,<4.0.0",
  "seaborn>=0.13.2,<1.0.0",
  "wordcloud>=1.9.2,<2.0.0",
  "pyvis>=0.3.2,<1.0.0",

  "mlflow>=2.15.1,<3.0.0",

  "pystache>=0.6.0,<1.0.0",
  "pycountry>=24.6.1,<25.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.2,<9.0.0",
  "pytest-cov>=5.0.0,<6.0.0",
  "pytest-mock>=3.14.0,<4.0.0",
  "pytest-asyncio>=0.23.7,<1.0.0",

  "black>=24.4.2,<25.0.0",
  "isort>=5.13.2,<6.0.0",
  "ruff>=0.5.4,<1.0.0",
  "mypy>=1.10.1,<2.0.0",
  "bandit[toml]>=1.7.9,<2.0.0",

  "pre-commit>=3.7.1,<4.0.0",
  "detect-secrets>=1.5.0,<2.0.0",

  "jupyter>=1.0.0,<2.0.0",
  "ipykernel>=6.29.5,<7.0.0",

  "types-requests>=2.32.0,<3.0.0",
  "types-PyYAML>=6.0.12,<7.0.0",
  "types-beautifulsoup4>=4.12.0,<5.0.0",

  "vcrpy>=6.0.1,<7.0.0",
  "responses>=0.25.0,<1.0.0",
  "freezegun>=1.5.1,<2.0.0",
]

[project.urls]
Homepage = "https://github.com/amanraj74/-OSCAR---Analysis-Reporting-AI-Based-Military-Intelligence-"
Repository = "https://github.com/amanraj74/-OSCAR---Analysis-Reporting-AI-Based-Military-Intelligence-"
Issues = "https://github.com/amanraj74/-OSCAR---Analysis-Reporting-AI-Based-Military-Intelligence-/issues"

[project.scripts]
oscar = "src.cli:main"

[tool.poetry]
name = "oscar"
version = "0.1.1"
description = "OSCAR — Open-Source Conflict Analysis & Reporting"
authors = ["BSERC Intern <intern@example.com>"]

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["src"]
known_third_party = [
  "pandas",
  "numpy",
  "streamlit",
  "plotly",
  "folium",
  "transformers",
  "torch",
  "spacy",
  "sklearn",
  "sqlalchemy",
]
skip_glob = ["*/migrations/*"]

[tool.ruff.lint.isort]
known-first-party = ["src", "dashboard"]
known-third-party = [
  "pandas",
  "numpy",
  "streamlit",
  "plotly",
  "folium",
  "transformers",
  "torch",
  "spacy",
  "sklearn",
  "sqlalchemy",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]
extend-exclude = ["migrations", "data", "models"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "N",   # pep8-naming
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "SIM", # flake8-simplify
  "C4",  # flake8-comprehensions
  "PT",  # flake8-pytest-style
  "RET",
  "ARG",
  "PL",
  "TRY",
]
ignore = [
  "E501",   # line length (handled by formatter)
  "B008",   # do not perform function calls in argument defaults
  "PLR0912", # too many branches (config loader is exception-heavy by design)
  "PLR0913", # too many arguments (acceptable for framework code)
  "PLR0915", # too many statements (acceptable for config loader)
  "PLC0415", # lazy imports for circular-import avoidance are intentional
  "PLW0603", # global keyword in module-level state holders (DB engine cache)
  "TRY003", # long messages outside exception class
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLR2004", "S101", "ARG001", "ARG002", "PLC0415", "N803", "N806", "I001", "PT018"]
"scripts/**/*.py" = ["PLR2004", "E402", "I001"]
"notebooks/**/*.py" = ["E402", "F401", "PLC0415"]
"src/config.py" = ["PLR0912", "PLR0915", "C901"]
"src/ingestion/gdelt.py" = ["PLR2004"]
"src/ingestion/reddit.py" = ["PLR2004", "TRY300", "RET504"]
"src/ingestion/newsapi.py" = ["PLR2004"]
"src/persistence/database.py" = ["PLR2004"]
"src/nlp/ner.py" = ["PLR2004"]
"src/nlp/topics.py" = ["PLR2004"]
"src/nlp/normalize.py" = ["PLR2004"]
"src/nlp/sentiment.py" = ["PLR2004"]
"src/ml/features.py" = ["PLR2004", "B023", "N803", "N806"]
"src/ml/escalation.py" = ["PLR2004", "N803", "N806", "ARG002"]
"src/ml/forecast.py" = ["PLR2004"]
"src/ml/anomaly.py" = ["PLR2004", "N803", "F821"]
"src/ingestion/acled.py" = ["PLR2004", "F841"]
"src/ingestion/wikipedia.py" = ["PLR2004"]
"src/ingestion/openweather.py" = ["PLR2004", "PLR0911", "UP038", "C408", "ARG005"]
"src/ingestion/alphavantage.py" = ["PLR2004", "PLR0911", "PLR0915", "C408", "ARG005"]
"src/ml/tracking.py" = ["TRY300", "ARG002"]
"src/ml/registry.py" = ["PLR2004"]
"src/ml/cli.py" = ["N806", "ARG001", "E402"]
"src/ingestion/cli.py" = ["N806", "ARG001", "E402"]
"src/nlp/cli.py" = ["N806", "ARG001", "E402"]
"dashboard/pages/8_Weather.py" = ["PLR0911"]
"dashboard/**/*.py" = [
  "PLR2004",
  "N803",
  "N806",
  "E402",
  "ARG001",
  "ARG002",
  "PLR0912",
  "TRY003",
  "TRY300",
  "PLR0915",
  "B008",
  "PLC0415",
  "I001",
]
"dashboard/*.py" = [
  "PLR2004",
  "N803",
  "N806",
  "E402",
  "ARG001",
  "ARG002",
  "PLR0912",
  "TRY003",
  "TRY300",
  "PLR0915",
  "B008",
  "PLC0415",
  "I001",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
exclude = ["migrations/", "data/", "models/"]

[[tool.mypy.overrides]]
module = "transformers.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "torch.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "spacy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "plotly.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "streamlit.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
  "--tb=short",
  "-m",
  "not integration and not slow and not e2e",
  "--cov=src",
  "--cov-report=term-missing",
  "--cov-fail-under=20",
]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: marks tests that require external services",
  "e2e: marks end-to-end tests",
]
filterwarnings = [
  "error",
  "ignore::DeprecationWarning",
  "ignore::PendingDeprecationWarning",
  "ignore::FutureWarning",
  "ignore::UserWarning:pydantic.*",
]

[tool.coverage.run]
branch = true
source = ["src"]
omit = [
  "*/tests/*",
  "*/migrations/*",
  "*/__init__.py",
  "src/cli.py",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "\\.\\.\\.",
]
show_missing = true
precision = 2

[tool.bandit]
exclude_dirs = ["tests", "migrations", "data"]
skips = ["B101"]

[tool.coverage.paths]
source = ["src"]






